<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:inputType="number"/>

    <Button
        android:id="@+id/button_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:text="@string/button_interval" />

    <Button
        android:id="@+id/button_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_interval"
        android:text="@string/button_time" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_time"
        android:textOn="@string/ON"
        android:textOff="@string/OFF" />

    <TextView
        android:id="@+id/toggleButtonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_time"
        android:layout_toLeftOf="@+id/toggleButton"
        android:layout_toStartOf="@+id/toggleButton"
        android:text="@string/toggleButtonTextView"
        android:textSize="18sp"
        android:gravity="center_vertical" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButton"
        android:layout_toEndOf="@+id/toggleButtonTextView"
        android:layout_toRightOf="@+id/toggleButtonTextView"
        android:textOn="@string/ON"
        android:textOff="@string/OFF" />

    <TextView
        android:id="@+id/toggleButtonTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleButton2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toggleButtonTextView"
        android:layout_toLeftOf="@+id/toggleButton2"
        android:layout_toStartOf="@+id/toggleButton2"
        android:gravity="center_vertical"
        android:text="@string/toggleButtonTextView2"
        android:textSize="18sp" />


</RelativeLayout>